<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey_background"
    android:layoutDirection="ltr">

    <RelativeLayout
...
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large_header"
            fontPath="fonts/iransans_bold.ttf"/>

        <!-- note: changed to horizontal scrollbar. may remove scroll.-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/RecyclerView"
            android:clickable="true"
            android:layoutDirection="ltr"
            android:layout_below="@+id/days_til_period"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/month_view_graphic_height"
            android:layout_centerHorizontal="true"
...
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/day_indicator_padding"
            android:layout_marginBottom="@dimen/day_indicator_padding"
            app:srcCompat="@drawable/n_up" />

        <LinearLayout
            android:id="@+id/today_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/upArrow"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/card_padding"
...
