...

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/grid_calendar_height">

            <android.support.v4.view.ViewPager
                android:id="@+id/calendar_pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/grid_calendar_height"
                android:layout_marginTop="@dimen/toolbar_padding" />

            <!--legend-->
            <LinearLayout
...
                    app:srcCompat="@drawable/old_ic_undo" />

                <!--edit period-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/period_edit_container"
                    android:gravity="center"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/period_edit_legend"
...
