...
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/dialog_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/toolbar_padding"
            android:padding="@dimen/button_padding" />
...
